--- a/src/style.css
+++ b/src/style.css
@@ -60,15 +60,24 @@ body
     font-size: calc(0.4rem + var(--resizer));
 }
 
+.container
+{
+    padding: calc(0.2rem + var(--resizer));
+    margin: calc(0.2rem + var(--resizer)) auto;
+    width: clamp(430px, 50vw, 840px);
+    border: 1px solid gray;
+}
+
 #weather-board
 {
-    height: clamp(320px, 30vh, 440px);
-    width: 100vw;
+    height: clamp(220px, 20vh, 440px);
+    width: 100%;
     background-color: rgba(250, 235, 215, 0.068);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    justify-content: center;
     padding: calc(0.5rem + var(--resizer));
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.158);
 }
@@ -89,12 +98,12 @@ body
     text-align: center;
     word-wrap: break-word;
     /* word-break: break-all; */
-    width: clamp(320px, 50vw, 840px);
+    /* width: clamp(320px, 50vw, 840px); */
 }
 
 #weather-forecast
 {
-    width: 100vw;
+    width: 100%;
     padding: calc(0.2rem + var(--resizer));
 }
 
