--- a/src/style.css
+++ b/src/style.css
@@ -184,18 +184,29 @@ body
 {
     display: flex;
     justify-content: space-between;
+    gap: 8px;
+    padding: var(--resizer) calc(0.2rem + var(--resizer));
+    font-size: calc(0.2rem + var(--resizer));
+    /* height: 50px; */
 }
+
 .day-stamp #forecast-date, 
 .day-stamp #forecast-day,
-.day-stamp #forecasr-icn,
+.day-stamp #forecast-icn,
 .day-stamp #forecast-temp
 {
-    min-width: fit-content;
-    /* border: 1px solid salmon; */
+    min-width: 44px;
     width: 20%;
     max-width: 120px;
 }
-
+.day-stamp #forecast-date
+{
+    min-width: fit-content;
+}
+.day-stamp #forecast-icn
+{
+    max-width: 24px;
+}
 
 /* Scrollbar style */
 /* width */
