--- a/src/style.css
+++ b/src/style.css
@@ -117,16 +117,18 @@ body
 
 #weather-board
 {
-    height: clamp(220px, 20vh, 440px);
+    height: clamp(220px, 58vh, 840px);
+    min-height: fit-content;
     width: 100%;
     background-color: var(--secondary-clr);
     display: flex;
+    /* border: 1px solid saddlebrown; */
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    justify-content: center;
     padding: calc(0.5rem + var(--resizer));
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.158);
+    gap: 16px;
 }
 #weather-board .temp-info
 {
@@ -208,9 +210,47 @@ body
     max-width: 24px;
 }
 
+
+  /* Misc parameters styling */
+  .misc-board
+  {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    min-height: fit-content;
+    overflow-y: auto;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    /* grid-template: repeat(auto-fit, minmax(180px, 1fr))/ repeat(auto-fit, minmax(280px, 1fr)); */
+    
+    /* grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: clamp(30px, 1fr,180px);
+    margin: 1rem 2rem; */
+    gap: clamp(12px, calc(4vw + var(--resizer)), 12%);  
+  }
+
+  .misc-board .parameter
+  {
+    border: 1px solid rgb(56, 52, 52);
+    /* height: clamp(); */
+    /* height: 80px; */
+    /* height: 12vh; */
+    /* height: 120px; */
+    height: clamp(100px, 12vh, 120px);
+    min-height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: clamp(4px, var(--resizer), 20px);
+    backdrop-filter: grayscale(100%) opacity(60%);
+    gap: clamp(4px, calc(4% + var(--resizer)), 12%);  
+    
+  }
+
+
 /* Scrollbar style */
 /* width */
 ::-webkit-scrollbar {
+    width: 10px;
     height: 8px;
   }
   
