--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ body
 }
 #main-header .city
 {
-    font-size: calc(0.8rem + var(--resizer));
+    font-size: calc(1.2rem + var(--resizer));
     font-weight: 400;
 }
 #main-header .menu
@@ -110,7 +110,7 @@ body
 {
     padding: calc(0.2rem + var(--resizer));
     margin: calc(0.2rem + var(--resizer)) auto;
-    width: clamp(430px, 50vw, 840px);
+    width: 84vw;
     border: 1px solid gray;
 }
 
@@ -219,14 +219,15 @@ body
     height: 100%;
     min-height: fit-content;
     overflow-y: auto;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     /* grid-template: repeat(auto-fit, minmax(180px, 1fr))/ repeat(auto-fit, minmax(280px, 1fr)); */
     
     /* grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
     grid-auto-rows: clamp(30px, 1fr,180px);
     margin: 1rem 2rem; */
-    gap: clamp(12px, calc(4vw + var(--resizer)), 12%);  
+    gap: clamp(12px, calc(2vw + var(--resizer)), 12%);  
     position: relative;
+    font-size: calc(0.6rem + var(--resizer));
   }
 
   .misc-board .parameter
@@ -236,7 +237,7 @@ body
     /* height: 80px; */
     /* height: 12vh; */
     /* height: 120px; */
-    height: clamp(100px, 12vh, 120px);
+    height: clamp(140px, 12vh, 220px);
     min-height: fit-content;
     display: flex;
     flex-direction: column;
