Fix viewport issue

--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,7 @@ body
     padding: calc(0.2rem + var(--resizer));
     margin: calc(0.2rem + var(--resizer)) auto;
     width: 84vw;
+    padding: 2rem min(120px, 8vw);
     border: 1px solid gray;
 }
 
@@ -227,7 +228,7 @@ body
     margin: 1rem 2rem; */
     gap: clamp(12px, calc(2vw + var(--resizer)), 12%);  
     position: relative;
-    font-size: calc(0.6rem + var(--resizer));
+    font-size: calc(0.4rem + var(--resizer));
   }
 
   .misc-board .parameter
@@ -237,14 +238,14 @@ body
     /* height: 80px; */
     /* height: 12vh; */
     /* height: 120px; */
-    height: clamp(140px, 12vh, 220px);
+    height: clamp(160px, 12vh, 220px);
     min-height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: clamp(4px, var(--resizer), 20px);
     backdrop-filter: grayscale(100%) opacity(60%);
-    gap: clamp(4px, calc(4% + var(--resizer)), 12%); 
+    /* gap: clamp(4px, calc(4% + var(--resizer)), 12%);  */
     border-radius: 16px; 
     
   }
